fixed styling on game row that would not allow it to stretch

--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -9,3 +9,8 @@
         "sidebar allGameRows"
         "sidebar allGameRows" ;
 }
+
+.all-game-rows {
+    display: grid;
+    grid-template-rows: repeat(2, .5fr);
+}
